<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/logo">


    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="240dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <EditText
            android:id="@+id/log_in_email_address"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/Email_Address"
            android:gravity="right"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:paddingRight="10dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"/>

        <EditText
            android:id="@+id/log_in_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:gravity="right"
            android:textColorHint="@color/white"
            android:textSize="17sp"
            android:paddingRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"/>

        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forget_pass"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:textColorHint="@color/red_darker"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:text="@string/login"
            android:background="@color/white"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:onClick="onClickButtonLogIn"
            />

        <TextView
            android:id="@+id/sign_up_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_hint"
            android:layout_marginTop="5dp"
            android:textColor="@color/red_darker"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="5dp"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:text="@string/btn_sign_up"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:layout_marginTop="5dp"
            android:onClick="SignUpActivity"
            />


    </LinearLayout>
</ScrollView>